    + Automatically enable the pulse alsa modules if pulse is running
    + Tweak dependencies a bit
  * debian/README.Debian, remove redudant comments
  * debian/control: switch to tdb as the backend database
  * debian/control: Enable orc support
  * debian/control: Add libfftw3-dev to b-d for the equalizer module
  * debian/pulseaudio.install: Install module-equalizer-sink

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 12 Aug 2011 16:03:07 +0200

pulseaudio (0.9.23-1) unstable; urgency=low

  [ Daniel T Chen ]
  * debian/control:
    + Fix typo in long description of pulseaudio-module-x11, thanks to
      Sam Morris (Closes: #500038)
    + Clarify long description of pulseaudio-esound-compat. Many apps
      still in use require functionality from this package
      (Closes: #601725)
  * debian/libpulse-dev.examples: Apply patch from Mario Lang to include
    simple examples in the dev package. Thanks! (Closes: #561258)
  * debian/patches/
    0003-Mention-speex-and-libsamplerate-in-pulse-daemon.conf.patch:
    + Mention speex in the resampling section. Currently the Resampler
      section of "Programming with Speex (the libspeex API)" contains
      the relevant information (Closes: #541206)
  * debian/patches/0004-Fix-FTBFS-with-xcb-util-0.3.8.patch:
    + Apply patch from Arnaud Fontaine <arnau@debian.org> and the
      suggestion from Alessandro Ghedini <al3xbio@gmail.com> to fix
      FTBFS with xcb-util 0.3.8. Thanks, Arnaud and Alessandro!
      (Closes: #624847)
  * debian/pulseaudio-utils.links: Also add pamon(1), parec(1), and
    parecord(1) (Closes: #599696)
  * debian/README.Debian: Clarify historical pulse-rt use and document
    current recommendation of RealtimeKit (Closes: #548363)

  [ Sjoerd Simons ]
  * New upstream release
  * d/p/0003-Mention-speex-and-libsamplerate-in-pulse-daemon.conf.patch
    + Removed, fixed upstream
  * d/p/0004-Fix-FTBFS-with-xcb-util-0.3.8.patch
    + Removed, fixed upstream
  * Update to 0.9.23 versioning: