@@ -1,1 +1,0 @@
-usr/lib/pulse-*/modules/module-hal-detect.so
